--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 rvm:
   - 2.2.1
+before_script:
+  - cp config/database.travis.yml config/database.yml
+  - psql -c 'create database flashcards_test' -U postgres
 script: "bundle exec rspec"
