--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 config/database.yml
-config/secrets.yml
 # Ignore bundler config.
 /.bundle
 
@@ -16,3 +15,6 @@ config/secrets.yml
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore application configuration
+/config/application.yml
