--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 config/database.yml
 config/aws.yml
+/public/system/*
 # Ignore bundler config.
 /.bundle
 
