--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,5 +19,5 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  twitter_callback_url: "http://www.flashcards.com/oauth/callback?provider=twitter"
+  twitter_callback_url: "https://stark-escarpment-3934.herokuapp.com/oauth/callback?provider=twitter"
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
