--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ rvm:
 before_script:
   - cp config/database.travis.yml config/database.yml
   - psql -c 'create database flashcards_test' -U postgres
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script: "bundle exec rspec"
